--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,22 @@
 @import "bootstrap";
+
+.clear {
+  clear: both;
+}
+
+h1 {
+  font-family: 'fira_sansextrabold', sans-serif;
+  font-size: 48px;
+}
+
+h4 {
+  font-family: 'fira_sansextrabold_italic', sans-serif;
+  font-size: 18px;
+}
+
+.links, a, a:hover {
+  font-family: 'fira_sansextrabold_italic', sans-serif;
+  font-size: 18px;
+  color: black;
+  text-decoration: none;
+}
