--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
       </div>
 
       <div class="col-xs-12 col-md-4 links">
-        <%= link_to 'Add New Expense', new_wallet_path %>
+        <!-- Button trigger modal -->
+        <%= link_to 'Add a new expense', '#', class: 'links', data: {toggle: 'modal', target: '#myModal'} %>
       </div>
 
       <div class="col-xs-6 col-md-4 links">
@@ -24,6 +25,32 @@
       </div>
     </header>
 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+            <h4 class="modal-title" id="myModalLabel">Add a new expense</h4>
+          </div>
+         <%= simple_form_for Wallet.new do |f| %>
+            <div class="modal-body">
+              <%= f.input :expense %>
+              <%= f.input :amount %>
+              <br />
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <%= f.submit 'Save', class: 'btn btn-primary' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+    
+    <hr />
     <br class="clear" />
 
     <% if flash[:error].present? %>
