fixing the list

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -20,3 +20,10 @@ h4 {
   color: black;
   text-decoration: none;
 }
+
+.expense {
+  font-family: 'fira_sansextrabold_italic', sans-serif;
+  font-size: 20px;
+  margin-left: 5px;
+  color: #1E43D6;
+}
