--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,6 +1,9 @@
 <h1>My Wallet</h1>
 
-<% @wallets.each do |wallet| %>
-  <%= wallet.expense %>
-  <%= wallet.amount %>
-<% end %>
+<div class="row expense">
+  <% @wallets.each do |wallet| %>
+      <div class="col-xs-6 col-md-4 col-offet-1"><%= wallet.expense %></div>
+      <div class="col-xs-6 col-md-8"><%= wallet.amount %></div>
+    <br />
+  <% end %>
+</div>
