--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,12 @@
       </div>
 
       <div class="col-xs-6 col-md-4 links">
-        <%= link_to 'Sign In', '#' %>
-        <%= link_to 'Sign Up', '#' %>
+        <% if user_signed_in? %>
+          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to 'Sign In', new_user_session_path %>
+          <%= link_to 'Sign Up', new_user_registration_path %>
+        <% end %>
       </div>
     </header>
 
@@ -60,6 +64,14 @@
         <%= flash[:error].html_safe %>
       </div>
     <% end %>
+
+    <% if notice.present? %>
+      <p class="alert alert-info"><%= notice %></p>
+    <% end %>
+    <% if alert.present? %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
